--- a/view/project.html
+++ b/view/project.html
@@ -7,8 +7,58 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
  
-<link rel="stylesheet" href="./style/style.css">
+<!-- <link rel="stylesheet" href="./style/style.css"> -->
     <title>Document</title>
+    <style>
+        body{
+    background-color: black;
+    color:white;
+    display: flex;
+}
+p{
+    text-align: left;
+}
+h3{
+    text-align: left;
+}
+b{
+    color: green;
+}
+a{
+   text-align: left;
+    color: green;
+    text-decoration: none;
+}
+.close {
+
+    width: 2em;
+    height: 2em;
+    background-color: white;
+    clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
+  }
+  table{
+    border: 1px solid white;
+    border-color: wheat;
+    border-top-style:none ;
+    border-left-style:none ;
+    border-right-style:none ;
+    height: 0px;
+    width: 100%;
+    
+  }
+  img{
+    width: 20px;
+    
+    text-align: left;}
+
+.wind{
+    border: 1px solid white;
+
+  
+
+    width: 100%;
+}
+    </style>
 </head>
 <body> <a href="#main">
     <div class="close">
