fixed bug with link`s

--- a/view/project.html
+++ b/view/project.html
@@ -53,10 +53,13 @@ a{
 
 .wind{
     border: 1px solid white;
-
-  
-
-    width: 100%;
+     width: 100%;
+}
+.icons{
+    display: none;
+}
+.imgText{
+    display: none;
 }
     </style>
 </head>
