add new project

--- a/view/clockproject.html
+++ b/view/clockproject.html
@@ -74,6 +74,7 @@ a{
                         <table>
                            
     <p><img src="./img/favicon-32x32.png" alt=""><a href="#project">JavaScript-Clock</a></p></table>
+   <table> <td><p><img src="" alt=""><a href="#ghSearcher">GitHub-Searcher</a></p></td></table>
                        <div class="wind">
        <a href="https://github.com/culcat/JavaScript-Clock"><p>GitHub</p> </a><a href="https://culcat.github.io/JavaScript-Clock/"><p>Сайт</p> </a>
     </div> 
