--- a/view/project.html
+++ b/view/project.html
@@ -75,6 +75,10 @@ a{
                         <tr>
                     <td><p><img src="./img/favicon-32x32.png" alt=""><a href="#clockproject">JavaScript-Clock</a></p></td></tr>
                     </table>
+                   <table> <td><p><img src="" alt=""><a href="#ghSearcher">GitHub-Searcher</a></p></td>
+                    </table>
+                
+                    
                    
                  
 </div>
