--- a/view/project.html
+++ b/view/project.html
@@ -15,6 +15,7 @@
     color:white;
     display: flex;
 }
+
 p{
     text-align: left;
 }
@@ -55,12 +56,12 @@ a{
     border: 1px solid white;
      width: 100%;
 }
-.icons{
+
+
+.tittle , .dateFrom, .icons, .imgText {
     display: none;
 }
-.imgText{
-    display: none;
-}
+
     </style>
 </head>
 <body> <a href="#main">
@@ -78,7 +79,7 @@ a{
                    <table> <td><p><img src="" alt=""><a href="#ghSearcher">GitHub-Searcher</a></p></td>
                     </table>
                 
-                    
+            <p class="sorryText"></p>        
                    
                  
 </div>
