--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ p{
     color: azure;
     
 }
-h1{
+.tittle{
 color: white;
 border-radius: 15px;
 font-style: normal;
@@ -78,6 +78,10 @@ p{
 
 .tittle{
     padding-top: 45%;
+  
 }
 
 
+.projects{
+    color: aqua;
+}
