--- a/view/project.html
+++ b/view/project.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
- 
-<!-- <link rel="stylesheet" href="./style/style.css"> -->
     <title>Document</title>
     <style>
         body{
@@ -61,36 +58,10 @@ a{
 .tittle , .dateFrom, .icons, .imgText {
     display: none;
 }
-
-    </style>
+</style>
 </head>
-<body> <a href="#main">
-    <div class="close">
-    </div>
-    </a>
-    
-        
-            <h1>Мои проекты</h1>
-            <h3>Готовые:</h3>
-                    <table>
-                        <tr>
-                    <td><div class="clockContainer">
-                        <p class="clock projects"><img src="./img/favicon-32x32.png" alt="">JavaScript-Clock</p>
-                        <a href="https://github.com/culcat/JavaScript-Clock" class="clockGH"></a>
-                        <a href="https://culcat.github.io/JavaScript-Clock/" class="clockWeb"></a></div></td></tr>
-                    </table>
-                   <table> <td><p><img src="" alt=""><a href="#ghSearcher">GitHub-Searcher</a></p></td>
-                    </table>
-                
-            <p class="sorryText"></p>        
-                   
-                 
-</div>
-</div>
-</div>
-
-<script src="../js/containerProject.js"></script>
-        </body>
+<body> 
+</body>
 </html>
 </body>
 </html>
