--- a/view/project.html
+++ b/view/project.html
@@ -49,13 +49,10 @@ a{
     
     text-align: left;}
 
-.wind{
-    border: 1px solid white;
-     width: 100%;
-}
 
 
-.tittle , .dateFrom, .icons, .imgText {
+
+.tittle , .dateFrom, .icons, .imgText,.btn {
     display: none;
 }
 </style>
