--- a/view/project.html
+++ b/view/project.html
@@ -12,7 +12,10 @@
     color:white;
     display: flex;
 }
-
+h1{
+      text-align: left;
+      
+  }
 p{
     text-align: left;
 }
@@ -52,7 +55,7 @@ a{
 
 
 
-.tittle , .dateFrom, .icons, .imgText,.btn {
+.tittle , .dateFrom, .icons, .imgText,.btn,.titlePages {
     display: none;
 }
 </style>
